@startuml

title __POLARSDK-ECG-HR-DEMO.APP's Class Diagram__\n

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.BuildConfig {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.HRVActivity {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.MainActivity {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.Plotter {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    interface com.polar.autpolarcompanion.PlotterListener {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.TimePlotter {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.UserDataActivity {
    }
  }
  

  namespace com.polar.autpolarcompanion {
    class com.polar.autpolarcompanion.UtilityClass {
    }
  }
  

  com.polar.autpolarcompanion.HRVActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.polar.autpolarcompanion.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.polar.autpolarcompanion.Plotter o-- com.polar.autpolarcompanion.Plotter.FadeFormatter : formatter
  com.polar.autpolarcompanion.Plotter o-- com.polar.autpolarcompanion.PlotterListener : listener
  com.polar.autpolarcompanion.TimePlotter o-- com.polar.autpolarcompanion.PlotterListener : listener
  com.polar.autpolarcompanion.UserDataActivity .up.|> com.polar.autpolarcompanion.PlotterListener
  com.polar.autpolarcompanion.UserDataActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.polar.autpolarcompanion.UserDataActivity o-- com.polar.autpolarcompanion.Plotter : plotter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
